--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    rgba(255, 60, 175, 0.97),
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  info: #3BD3F9,
+  beauty: rgba(255, 69, 179, 0.92)
 );
 
 
